--- a/index.html
+++ b/index.html
@@ -6,20 +6,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=Edge, chrome=1">
     <title>PAY.JP | ペイ ドット ジェーピー</title>
 
-    <script type="text/javascript" src="/app.bundle.js"></script>
+    <script type="text/javascript" src="//code.jquery.com/jquery-2.1.0.min.js"></script>
     <script type="text/javascript" src="//jpostal-1006.appspot.com/jquery.jpostal.js"></script>
+    <script type="text/javascript" src="/app.bundle.js"></script>
     <script type="text/javascript">
     $(window).ready( function() {
-      $('#postcode1').jpostal({
-        postcode : [
-          '#postcode1',
-        ],
-        address : {
-          '#address1'  : '%3',
-          '#address2'  : '%4',
-          '#address3'  : '%5'
-        }
-      });
+//      $('#postcode1').jpostal({
+//        postcode : [
+//          '#postcode1',
+//        ],
+//        address : {
+//          '#address1'  : '%3',
+//          '#address2'  : '%4',
+//          '#address3'  : '%5'
+//        }
+//      });
     });
     </script>
   </head>
